--- a/sass/layout/_photographer-gallery.scss
+++ b/sass/layout/_photographer-gallery.scss
@@ -47,7 +47,7 @@
         overflow: hidden;
     }
     &-select__option{
-        z-index: 500;
+        z-index: 10;
         color: #FFFFFF;
         background-color: $red;
         border: none;
