--- a/sass/layout/_photographer-lightbox.scss
+++ b/sass/layout/_photographer-lightbox.scss
@@ -1,6 +1,6 @@
 #lightbox-modal {
     position: fixed;
-    z-index: 1;
+    z-index: 11;
     left: 0;
     top: 0;
     height: 100%;
